# SwampDB

./: .gitignore  CMakeLists.txt  InnerNode.cpp  InnerNode.h  Nodes.cpp  Nodes.h  main.cpp
database/boards/: Board.cpp  Board.h
database/boards/board_types/: Board_Preset.cpp  Board_Preset.h  Group.h  Hierarchical.cpp  Hierarchical.h  Individual.h
database/nodes/: Nodes.cpp  Nodes.h
database/nodes/inner_nodes/: InnerNode.h
database/nodes/types/: node_types.h
hash/: Byte.cpp  Byte.h  const.h  hash.cpp  hash.h
hash/layer/: Layer.cpp  Layer.h
hash/layer/layers/: Layer_1.cpp  Layer_1.h  Layer_2.cpp  Layer_2.h  Layer_3.cpp  Layer_3.h  Layer_4.cpp  Layer_4.h  Layer_5.cpp  Layer_5.h  Layer_6.cpp
hash/layer/layers/headers/: Layer_1.h  Layer_2.h  Layer_3.h  Layer_4.h  Layer_5.h  Layer_6.h
hash/layer/processing_layer/: Processing_Layer.cpp  Processing_Layer.h
